Code Cleanup, part 1: - Improves the code structure and adds additional comments to much of the code to increase readability - Improves the message and errorMessage roll templates. Both templates no longer require setting dummy attributes - Improves the action button code. Can now generate any number of buttons - Replaces a lot of old translations with the more space efficient getTranslationbyKeyCustom() function - Added support for adding icons using markdown (written as [icon](imageUrl)). Work for both roll templates, macros and the CustomMessage AutoEffect - Improved getIcon(). Now allows for getting a HTML element, a markdown icon or the image url - Makes some parts of the sheet more modular. Will be important when changing over to using repeating sections for equipment and skills

--- a/ProjectMoonTRPG/ProjectMoonTRPGStyle.css
+++ b/ProjectMoonTRPG/ProjectMoonTRPGStyle.css
@@ -505,7 +505,8 @@ textarea::placeholder, .CharSmallNotes::placeholder, .CharDetail::placeholder, .
     position: absolute;
     top: 0; left: 15px;
 }
-    #logo img {width: 150px; min-width: 150px;
+#logo img {
+    width: 150px; min-width: 150px;
 }
 
 
@@ -1939,7 +1940,7 @@ background-image: linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(0,0,0,0)), ur
     overflow: hidden;
 }
 .ailmentCustomEditor {
-    height: 280px;
+    height: 320px;
 }
 .ailmentCustomEditor .repcontrol_move, #globalSettings .repcontrol_move {
     display: none;
@@ -2005,7 +2006,7 @@ background-image: linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(0,0,0,0)), ur
 .ailmentCustomEditor .repcontainer, .ailmentCustomEditor .repcontainerMock  {
     display: flex;
     flex-wrap: wrap;
-    max-height: 280px;
+    max-height: 320px;
     overflow: auto;
     padding-left: 18px;
 }
@@ -2505,6 +2506,25 @@ height: 35px;}
     color: #fff !important;
     background-color: rgba(0,0,0,0.5) !important;
 }
+.sheet-rolltemplate-message a,
+.sheet-rolltemplate-errorMessage a {
+    pointer-events: none;
+}
+.sheet-rolltemplate-message .sheet-styledText,
+.sheet-rolltemplate-errorMessage .sheet-styledText {
+    pointer-events: visible;
+    cursor: text;
+    color: #fff;
+}
+.sheet-rolltemplate-message .sheet-styledText:hover,
+.sheet-rolltemplate-errorMessage .sheet-styledText:hover {
+    text-decoration: none;
+}
+.sheet-rolltemplate-message img[alt*="icon"],
+.sheet-rolltemplate-errorMessage img[alt*="icon"] {
+    height: 25px;
+    width: 25px;
+}
 
 /* Damage helper message styling*/
 .sheet-rolltemplate-damagecalculation img {
@@ -2720,7 +2740,6 @@ height: 35px;}
     width: calc(50% - 8px);
 }
 .sheet-rolltemplate-actionbuttons .sheet-button {
-    height: 100%;
     background-color: #6f8b60;
     border-radius: 10px;
 }
@@ -2743,7 +2762,7 @@ height: 35px;}
     margin-right: 2px;
 }
 .sheet-rolltemplate-actionbuttons a:has(img) {
-    position:absolute;
+    position: absolute;
     pointer-events: none;
     background-color: rgba(0,0,0,0) !important;
     padding: 4px;
@@ -3402,19 +3421,19 @@ justify-content: center;
 
 /* Colors */
 .conditioalButtonColorSelection[value="blue"]:checked ~ .conditioalButtonColor,
-.sheet-rolltemplate-actionbuttons .sheet-yellow { background-color: #7397d1; }
+.sheet-rolltemplate-actionbuttons .sheet-button:has(img[alt*="yellow"])  { background-color: #7397d1; }
 .conditioalButtonColorSelection[value="yellow"]:checked ~ .conditioalButtonColor,
-.sheet-rolltemplate-actionbuttons .sheet-blue { background-color: #dbb748; }
+.sheet-rolltemplate-actionbuttons .sheet-button:has(img[alt*="blue"])  { background-color: #dbb748; }
 .conditioalButtonColorSelection[value="orange"]:checked ~ .conditioalButtonColor,
-.sheet-rolltemplate-actionbuttons .sheet-blue { background-color: #cf8c44; }
+.sheet-rolltemplate-actionbuttons .sheet-button:has(img[alt*="orange"]) { background-color: #cf8c44; }
 .conditioalButtonColorSelection[value="red"]:checked ~ .conditioalButtonColor,
-.sheet-rolltemplate-actionbuttons .sheet-red { background-color: #c25944; }
+.sheet-rolltemplate-actionbuttons .sheet-button:has(img[alt*="red"]) { background-color: #c25944; }
 .conditioalButtonColorSelection[value="purple"]:checked ~ .conditioalButtonColor,
-.sheet-rolltemplate-actionbuttons .sheet-purple { background-color: #8e7cc3; }
+.sheet-rolltemplate-actionbuttons .sheet-button:has(img[alt*="purple"])  { background-color: #8e7cc3; }
 .conditioalButtonColorSelection[value="green"]:checked ~ .conditioalButtonColor,
-.sheet-rolltemplate-actionbuttons .sheet-green { background-color: #85a874; }
+.sheet-rolltemplate-actionbuttons .sheet-button:has(img[alt*="green"])  { background-color: #85a874; }
 .conditioalButtonColorSelection[value="black"]:checked ~ .conditioalButtonColor,
-.sheet-rolltemplate-actionbuttons .sheet-green { background-color: #000000; }
+.sheet-rolltemplate-actionbuttons .sheet-button:has(img[alt*="black"])  { background-color: #000000; }
 
 
 .WHITE {
